# private-query

./: .bazelrc  .copilotignore  .gitignore  .pylintrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  config.yaml  config.yaml.example  design_architecture.md  pyproject.toml  requirements.txt  requirements_lock.txt  ruff.toml
.github/workflows/: ci.yaml
scripts/: start_ollama.sh  stop_ollama.sh
src/: chroma_util.py  chroma_util_test.py  config_util.py  device_util.py  main_cli.py  ollama_util.py  private_query.py  private_query_test.py  resource_util.py  retry_util.py  transformer_util.py
src/private_query/: main_cli.py
tests/: test_chroma_util.py  test_config_util.py  test_ollama_util.py  test_private_query.py  test_resource_util.py  test_transformer_util.py  test_util.py  test_version.py
tests/data/: 20k_leagues_under_the_sea.txt  journey_to_the_centre_of_the_earth.txt  romeo_and_juliette.txt  the_adventures_of_sherlock_holmes.docx
tools/: BUILD.bazel  pylint.bzl  pylint_wrapper.py  pytest_test.bzl
tools/lint/: BUILD.bazel  linters.bzl
