load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_pex_binary")
load("//tools/build:build_defs.bzl", "py_library", "py_test")

# project setup
exports_files([
    "pyproject.toml",
    "src/__init__.py",
    "tests/__init__.py",
])

# --- Bandit ---
alias(
    name = "bandit",
    actual = "//tools/lint:bandit",
)

# project targets

# py_library(
#     name = "transformer_util",
#     srcs = ["src/transformer_util.py"],
#     deps = [
#         "@pypi//pypdf",
#         "@pypi//python-docx",
#     ],
# )

# py_test(
#     name = "test_transformer_util",
#     srcs = ["tests/test_transformer_util.py"],
#     deps = [":transformer_util"],
# )

py_library(
    name = "test_util",
    srcs = ["tests/test_util.py"],
    data = ["scripts/start_ollama.sh"],
    deps = [
        "@pypi//bazel_runfiles",
        "@pypi//psutil",
        "@pypi//tenacity",
        "@pypi//loguru",
    ],
)

py_library(
    name = "config_util",
    srcs = ["src/config_util.py"],
    deps = [
        "@pypi//pyyaml",
        "@pypi//loguru",
        ],
)

py_test(
    name = "test_config_util",
    srcs = ["tests/test_config_util.py"],
    deps = [":config_util"],
)

py_library(
    name = "ollama_util",
    srcs = ["src/ollama_util.py"],
    deps = [
        ":config_util",
        "@pypi//ollama",
        "@pypi//loguru",
        "@pypi//tenacity",
    ],
)

py_test(
    name = "test_ollama_util",
    srcs = ["tests/test_ollama_util.py"],
    deps = [
        ":config_util",
        ":ollama_util",
        ":test_util",
    ],
    tags = ["exclusive"],
)

py_binary(
    name = "private_query_cli",
    srcs = ["src/main_cli.py"],
    main = "src/main_cli.py",
    deps = [
        ":private_query_lib",
        ":chroma_util",
        ":config_util",
        ":ollama_util",
        "@pypi//typer",
        "@pypi//loguru",
    ],
)

py_pex_binary(
    name = "private_query_pex",
    binary = ":private_query_cli",
    inject_env = {
        "PEX_UNZIP": "1"
    },
    tags = ["manual"],
)

genrule(
    name = "private_query",
    srcs = [":private_query_pex"],
    outs = ["private-query"],
    cmd = "cp $< $@",
    executable = True,
    tags = ["manual"],
)

py_library(
    name = "private_query_lib",
    srcs = ["src/private_query.py"],
    deps = [
        ":chroma_util",
        ":config_util",
        ":ollama_util",
        ":test_util",
        "@pypi//chromadb",
        "@pypi//loguru",
    ],
)

py_test(
    name = "test_private_query",
    srcs = ["tests/test_private_query.py"],
    data = glob(["tests/data/*.txt"]),
    deps = [
        ":chroma_util",
        ":config_util",
        ":ollama_util",
        ":private_query_lib",
    ],
    tags = ["exclusive"],
)

py_library(
    name = "chroma_util",
    srcs = ["src/chroma_util.py"],
    deps = [
        ":config_util",
        "@pypi//chromadb",
        "@pypi//more_itertools",
        "@pypi//sentence_transformers",
        "@pypi//torch",
        "@pypi//transformers",
        "@pypi//loguru",
        "@pypi//tenacity",
    ],
)

py_test(
    name = "test_chroma_util",
    srcs = ["tests/test_chroma_util.py"],
    deps = [":chroma_util"],
)

py_test(
    name = "test_version",
    srcs = ["tests/test_version.py"],
)
