bazel_dep(name = "rules_python", version = "1.7.0")
PYTHON_VERSION = "3.14"

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python, "python_3_14")

bazel_dep(name = "rules_uv", version = "0.89.2")
