module(
    name = "private_query",
    version = "0.1.1",
)

bazel_dep(name = "aspect_rules_py", version = "1.11.2")
bazel_dep(name = "aspect_rules_lint", version = "2.5.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.0")
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")

PYTHON_VERSION = "3.13"

# Setup hermetic Python toolchain using aspect_rules_py
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

interpreters = use_extension("@aspect_rules_py//py/unstable:extension.bzl", "python_interpreters")
interpreters.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(interpreters, "python_interpreters")

register_toolchains("@python_interpreters//:all")

# Setup internal tools
tools = use_extension("@aspect_rules_py//py:extensions.bzl", "py_tools")
tools.rules_py_tools()
use_repo(tools, "rules_py_tools")

# Setup uv and parse the lockfile

uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(
    hub_name = "pypi",
)
uv.project(
    default_build_dependencies = [
        "setuptools",
        "wheel",
        "maturin",
        "hatchling",
        "build",
        "cython",
    ],
    hub_name = "pypi",
    lock = "//:uv.lock",
    pyproject = "//:pyproject.toml",
)
use_repo(uv, "pypi")
