[project]
name = "private-query"
version = "0.1.0"
description = "A solution for embedding private datasets into vector stores and querying against local LLMs."
readme = "README.md"
requires-python = ">=3.12,<3.13" # torch currently only supports <=3.12
dependencies = [
    "chromadb>=1.5.9",
    "pyyaml>=6.0.3",
    "more-itertools>=11.0.2",
    "torch>=2.10.0",
    "ollama>=0.6.2",
    "sentence-transformers>=5.5.0",
    "transformers>=5.8.1",
    "psutil>=7.2.2",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "typer>=0.25.1",
    "loguru>=0.7.3",
    "tenacity>=9.1.4",
    "reportlab>=4.5.1",
    "pydantic>=2.13.4",
    "bazel-runfiles>=2.0.1",
]

[dependency-groups]
dev = [
    "private-query", # included to work well with bazel deps
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "bandit>=1.9.4",
    "wheel>=0.47.0",
    "maturin>=1.13.3",
    "hatchling>=1.29.0",
    "setuptools>=82.0.1",
    "cython>=3.2.4",
    "puccinialin>=0.1.12",
    "ty>=0.0.39",
    "taskipy>=1.2.1",
    "coverage>=7.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project.scripts]
private-query = "main_cli:app"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'"
]

[tool.ty.src]
include = ["src", "tests"]
exclude = [".venv", "bazel*"]

[tool.ty.environment]
extra-paths = ["tests"]

[tool.ruff]
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*__init__.py",
    "bazel-*",
    ".vscode",
    ".ollama",
    ".pytest_cache",
    ".ruff_cache"
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "S", "D", "B", "SIM", "C4", "N"]
ignore = ["S101", "D203", "D213", "D205", "S311", "I001"]

[tool.pytest.ini_options]
pythonpath = ["tests", "src"]

# Test file patterns
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Default options for pytest
addopts = [
    "-ra",                    # Show summary of all tests
    "-q",                     # Quiet mode
    "--strict-markers",       # Error on unknown markers
    "--strict-config",        # Error on config issues
    "-v",                     # Verbose output
]

# Ignore specific warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Register custom markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Add directories you want to completely skip during test discovery
norecursedirs = [
    ".venv",
    ".git",
    "bazel-*",
    "bazel-out"
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.taskipy.tasks]
lint = "uv run ruff check . && uv run ty check . && uv run bandit -r src/"
