[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "private-query"
version = "0.1.0"
description = """\
    A solution for embedding private datasets into vector stores and querying against \
    local LLMs.\
    """
readme = "README.md"
requires-python = ">=3.12,<3.13"  # torch currently only supports <=3.12
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bazel-runfiles>=2.0.1",
    "chromadb>=1.5.9",
    "loguru>=0.7.3",
    "more-itertools>=11.0.2",
    "ollama>=0.6.2",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "reportlab>=4.5.1",
    "sentence-transformers>=5.5.0",
    "tenacity>=9.1.4",
    "torch>=2.10.0",
    "transformers>=5.8.1",
    "typer>=0.25.1",
]
scripts.private-query = "main_cli:app"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "coverage>=7.14.0",
    "cython>=3.2.4",
    "hatchling>=1.29.0",
    "maturin>=1.13.3",
    "private-query",         # included to work well with bazel deps
    "puccinialin>=0.1.12",
    "pyproject-fmt>=2.21.2",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "setuptools>=82.0.1",
    "taskipy>=1.2.1",
    "ty>=0.0.39",
    "wheel>=0.47.0",
]

[tool.hatch]
build.targets.wheel.packages = [ "src" ]
build.targets.wheel.sources.src = ""

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'"
]

[tool.ruff]
target-version = "py312"
exclude = [
    "*__init__.py",
    ".git",
    ".ollama",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pycache__",
    "bazel-*"
]
lint.select = [ "B", "C4", "D", "E", "F", "I", "N", "S", "SIM", "UP", "W" ]
lint.ignore = [ "D203", "D205", "D213", "I001", "S101", "S311" ]

[tool.pyproject-fmt]
indent = 4
column_width = 88
keep_full_version = true

[tool.bandit]
exclude_dirs = [ "tests" ]

[tool.ty]
environment.extra-paths = [ "tests" ]
src.include = [ "src", "tests" ]
src.exclude = [ ".venv", "bazel*" ]

[tool.pytest]
ini_options.pythonpath = [ "tests", "src" ]
# Test file patterns
ini_options.testpaths = [ "tests" ]
ini_options.python_files = [ "test_*.py", "*_test.py" ]
ini_options.python_classes = [ "Test*" ]
ini_options.python_functions = [ "test_*" ]
# Default options for pytest
ini_options.addopts = [
    "-ra",              # Show summary of all tests
    "-q",               # Quiet mode
    "--strict-markers", # Error on unknown markers
    "--strict-config",  # Error on config issues
    "-v",               # Verbose output
]
# Ignore specific warnings
ini_options.filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
# Register custom markers
ini_options.markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
# Add directories you want to completely skip during test discovery
ini_options.norecursedirs = [ ".venv", ".git", "bazel-*", "bazel-out" ]

[tool.coverage]
run.branch = true
run.omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "__init__.py",
]
# Coverage configuration
run.source = [ "src" ]
report.exclude_lines = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.taskipy]
tasks.lint = "uv run ruff check . && uv run ty check . && uv run bandit -r src/"
